Fix right arrow alignment for buttons on desktop

--- a/client/src/style/_variables.scss
+++ b/client/src/style/_variables.scss
@@ -113,7 +113,9 @@ wide: 1300px);
     }
 
     svg {
-      margin-left: 5%;
+      width: 42px;
+      height: 42px;
+      margin-left: 1em;
     }
   }
 
